--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8" />
-	<title>Phaser - Making your first game, part 1</title>
+	<title>Blocky</title>
 	<script type="text/javascript" src="phaser.min.js"></script>
 	<style type="text/css">
 		body {
@@ -14,7 +14,8 @@
 
 <body>
 
-<script src="script.js"></script>
+	<script src="script.js"></script>
+
 </body>
 
 </html>
